@@ -7,6 +7,7 @@
  */
 
 plugins {
+	id 'java'
 	// Apply the application plugin to add support for building a CLI application in Java.
 	id 'application'
 	id "checkstyle"
@@ -25,6 +26,11 @@ version '0.1.0-snapshot'
 repositories {
 	// Use Maven Central for resolving dependencies.
 	mavenCentral()
+}
+
+compileJava {
+	options.compilerArgs << '--enable-preview'
+	options.compilerArgs << '-Xlint:preview'
 }
 
 dependencies {
